cluster-critical/traefik/error-pages/templates/middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: error-pages
spec:
  errors:
    status:
      - "400-599"
    query: /l7-dark/{status}.html
    service:
      name: error-pages
      port: 8082
